This file summarizes changes in WinMerge releases.
Numbers in parentheses refer to SourceForge.net tracker item numbers (#XXXXX) or
to Subversion revision numbers (rXXXXX). To open the tracker item, go to URL:
http://winmerge.org/tracker/[tracker-id]

WinMerge 2.13.3
  Bugfix: Could not copy files from right to left (#2556904)
  Translation updates:
  - French (#2551043, #2551066)


WinMerge 2.13.2 - 2009-01-28 (r6395)
  Register.bat should use Find with full path (#2536582)
  Bugfix: Creating new files caused message about missing files (#2515875)
  Bugfix: Could not hide folders in recursive compare (#2528749)
  Bugfix: Folder Compare:Copy Right/Left don't create folder
    structure (#2529517)
  Bugfix: Must Show Different to Show L/R Unique (#2129561)
  Translation updates:
  - Brazilian (#2524796)
  - Chinese Traditional (#2540115)
  - Dutch (#2531307)
  - Swedish (#2511043)

WinMerge 2.13.1 - 2009-01-15 (r6334)
  Update Python syntax highlight keywords for Python 2.6 (#2473375)
  More accurate visible area indicator in location pane (#2479804)
  Better Unicode file detection for full contents compare (#2477657)
  New options page for Shell Integration options (#2433648)
  Bugfix: Could not open project file that contains an ampersand 
    character in folder names (#2372000)
  Bugfix: File compare method "Modified Date and Size" ignored file size
    (#2455595)
  BugFix: Quick compare didn't ignore EOL differences (#2433677)
  Bugfix: Location pane was empty for some files with diffs (#2459234)
  Bugfix: Remove EOL characters from command line (#2458728)
  Bugfix: Merging one line diff to empty other side didn't work (#2456399)
  Bugfix: Line filter editing didn't update edit box when editing was
   canceled by ESC key (#2493935)
  Bugfix: Wrong number shown for difference when using line filters (#2493980)
  Bugfix: Crashed if compared file disappeared during file compare (#2493945)
  Translation updates:
  - Brazilian (#2461443)
  - Czech (r6201)